2.3.7
- Fixed Powah's dry ice and uraninite ores ConfiguredFeatures should be registered, closes #129.

2.3.6
- Fixed Configs for thermo_gen and magmator are mixed up, Closes #126.
- Fixed Excessive cable network size issues, Closes #128.
- Added uraninite storage blocks tags.
- Updated lollipop to v3.2.3.

2.3.5
- Fixed Impossible to disable worldgen, Closes #124.

2.3.4 (1.16.4)
- Initial port to 1.16.4

2.3.4
- Disabled energizing particle temporary to fix a crash.

2.3.3
- Fix Client Crash Using Powah and Forge 34.1.27+, Closes #119

2.3.2
- Fixed opening GUI instantly crashes Forge server, Closes #115.
- Updated lollipop to v3.2.2

2.3.1
- Fixed reactor gen mode not stopping reactor when is full.
- Fixed JEI not showing info.
- Random bug fixes.
- Updated lollipop to v3.2.1

2.3.0
- Did a full rewrite to the Powah: manual.
- Improved all tooltips.
- Added Energizing orb particles.
- Added Energizing orb progress overlay.
- Fixed player transmitter and energy hopper bounding boxes (voxel shapes).
- Fixed reactor and some other non chargeable blocks getting charged.
- Fixed graphics on Energy Cable are counter intuitive, Closes #107.
- Fixed cables not stacking, Closes #104.
- Moved to 1.16.3
- Clean-up.
- Updated lollipop to v3.2.0

2.2.0
- Fix player transmitter not checking top part position, Closes #100.
- Fix Uraninite ores breaking hardness.
- Fixed random bugs.
- Updated lollipop to v3.0.0

2.1.3
- Added Reactor generation mode (if set to on the reactor will stop if is full and start when has less than 70% of energy).
- Fixed losing side config when chunk load/unload.
- Fixed Player transmitter not breaking properly.
- Updated lollipop to v2.1.3.

2.1.2
- Fixed magmator creates ungodly amount of pings in server, Closes #97.
- Added all uraninite ores to the forge:ores and forge:ores/uraninite tags, Closes #96.
- Updated lollipop to v2.1.2.

2.1.1